<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_filter_idea"
        android:icon="@drawable/ic_search_black"
        android:title="@string/title_filter_idea" />

    <item
        android:id="@+id/navigation_search_store"
        android:icon="@drawable/ic_store_black"
        android:title="@string/title_search_store" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_basket_black"
        android:title="@string/title_basket" />
</menu>