<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tkea.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.tkea.ui.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.tkea.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_filter_idea"
        android:name="com.example.tkea.ui.filter_idea.FilterIdeaFragment"
        android:label="@string/title_filter_idea"
        tools:layout="@layout/fragment_filter_idea" />
    <fragment
        android:id="@+id/navigation_search_store"
        android:name="com.example.tkea.ui.search_store.SearchStoreFragment"
        android:label="@string/title_search_store"
        tools:layout="@layout/fragment_search_store" />

</navigation>